--- a/Landing Page - Healthy Recipes/css/style.css
+++ b/Landing Page - Healthy Recipes/css/style.css
@@ -7,19 +7,22 @@
   
   body {
     text-align: center;
-    padding-top: 275px;
-    background-image: url("/img/background-image.svg");
+    /* background-image: url("/img/background-image.svg");
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
+    background-position: center; */
+    background: url("/img/background-image.svg") no-repeat center/cover;
+    color: #EBF1FB;
   
     height: 100vh;
   
     font-family: 'Spectral', serif;
+
+    display: grid;
+    place-content: center;
   }
   
   h1 {
-    color: #EBF1FB;
     font-weight: 400;
     font-size: 64px;
     line-height: 120px;
@@ -34,10 +37,9 @@
   p {
     font-size: 20px;
     font-weight: 500;
-    line-height: 30.44px;
+    line-height: 30px;
     margin-top: 4px;
     margin-bottom: 72px;
-    color: #EBF1FB;
   }
   
   /* botão */
@@ -57,3 +59,6 @@
     text-decoration: none;
   }
   
+  .btn-primary:hover {
+    background: #EBF1FB;
+  }
